# Virtual-Meeting-Room

./: .gitignore  .pr-body-tmp.md  AI_Meeting_Room_PRD_v1.0.md  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  primer.md
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
app/agent-demo/: page.tsx
components/: agent-card.tsx
components/ui/: calendar.tsx
docs/: CHANGELOG.md  DEPS.md  KØREPLAN.md  LESSON.md  MASTER_PROMPT_GOOGLE_AI_STUDIO.md  PRD.md  glossary.md
docs/active/: #1-sidecar-respond-events-kobling.md  #2-bff-sse-proxy.md  #3-id-propagation.md  #4-ci-contract-gate.md  #5-owner-scoping-events.md  #6-agentprofile-loader-struktur.md
docs/adr/: 0001-biyocon-as-primary-base.md  0002-standalone-room-before-teams-media-bot.md  0003-livekit-cloud-eu-mvp-selfhost-exit.md  0004-azure-neural-tts-mvp.md  0005-python-sidecar-agent-runtime.md  0006-council-compare-model-lab.md
docs/architecture/: stage-2-architecture.md  stage-3-build-execution-plan.md
docs/design/: avatar-style-spec.md
docs/done/: #1-sidecar-respond-events-kobling.md  #2-bff-sse-proxy.md  #3-id-propagation.md  (+3 more)
hooks/: useAgentEvents.ts
scripts/: agent-contract.test.mjs
sidecar/: README.md  pyproject.toml
sidecar/profiles/: analyst.yaml  facilitator.yaml  pm.yaml
sidecar/src/agent_sidecar/: __init__.py  audit.py  contracts.py  main.py
sidecar/src/agent_sidecar/routes/: agent.py
sidecar/src/agent_sidecar/runtime/: instance.py  profile_loader.py  state.py
sidecar/tests/: test_contract.py  test_endpoints.py  test_profiles.py
tasks/: lessons.md
(+17 files in other folders)
